[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/blocks.png" type="Texture" id=1]
[ext_resource path="res://TetrisShape.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="TetrisShape" type="Node2D"]
script = ExtResource( 2 )

[node name="Block1" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Block2" type="AnimatedSprite" parent="."]
position = Vector2( -64, 0 )
frames = SubResource( 1 )

[node name="Block3" type="AnimatedSprite" parent="."]
position = Vector2( 0, 64 )
frames = SubResource( 1 )

[node name="Block4" type="AnimatedSprite" parent="."]
position = Vector2( 64, 64 )
frames = SubResource( 1 )
